@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# (c) 2004-2012 Denora Team
+# (c) 2004-2013 Denora Team
 # Contact us at info@denorastats.org
 #
 # This program is free but copyrighted software; see the file COPYING for
