@@ -2,7 +2,7 @@
 #
 # GeoIP update script for Denora Stats.
 #
-# (c) 2011-2012 Denora Team
+# (c) 2011-2013 Denora Team
 # Contact us at info@denorastats.org
 #
 # This program is free but copyrighted software;
