@@ -1,5 +1,16 @@
 #!/usr/bin/perl
 #
+# (c) 2004-2013 Denora Team
+# Contact us at info@denorastats.org
+#
+# This program is free but copyrighted software; see the file COPYING for
+# details.
+#
+# Based on the original code of Anope by Anope Team.
+# Based on the original code of Thales by Lucas.
+#
+# 
+#
 # Ribosome's all in one language tool
 # 1) Compares to check for missing lines
 # 2) Compares to check for equal lines
