@@ -2,7 +2,7 @@
 #
 # Configuration script for Denora MySQL Support.
 #
-# (c) 2004-2012 Denora Team
+# (c) 2004-2013 Denora Team
 # Contact us at info@denorastats.org
 #
 # This program is free but copyrighted software; see the file COPYING for
