@@ -1,7 +1,15 @@
 #!/bin/sh
-################################################
-# Register Script - orginally created for Anope
-################################################
+#
+# (c) 2004-2013 Denora Team
+# Contact us at info@denorastats.org
+#
+# This program is free but copyrighted software; see the file COPYING for
+# details.
+#
+# Based on the original code of Anope by Anope Team.
+# Based on the original code of Thales by Lucas.
+#
+# 
 
 ###############################################
 # Set Variables
