@@ -68,6 +68,8 @@ Changes
 11/02/11 r416 Updated Windows installer
 
 Fixes
+13/10/17 StatServ ADMIN ADD now updates User struct to show they are an admin (we did it in DEL)
+13/10/17 StatServ ADMIN SETPASS now updates SQL with the password
 13/10/16 cron_chanstats.c does not load if sql is disabled, all cron_* and xmlrpc_* mods now 
          use MOD_STOP if there is error binding the commands.
 13/10/16 HTML modules no longer load if html is disabled, and return MOD_STOP if there is an error
